# OSlabs

./: CMakeLists.txt  main.cpp
lab1/: Package.cpp  Package.h  PackageExec.cpp  PackageExec.h  PackageTask.cpp  PackageTask.h  PackageTaskEnum.h  PackageTaskUtil.h  Terminal.h
lab2/: Package.h  PackageExec.cpp  PackageTask.h  PackageTaskType.h  TaskExecution.h  Terminal.h
lab2/template/: DictTemplate.h
lab3/client/: Client.h  ClientRun.cpp
lab3/server/: Server.h  ServerRun.cpp
lab3/util/: ClientServerHelper.h  TCP.h  User.h
